<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.075"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        android:background="@color/theme"
        android:backgroundTint="@color/theme">


    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout"
        android:background="@drawable/box2"
        android:hint="नाम"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_margin="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_margin="20dp"
        android:hint="प्रकार"
        android:id="@+id/typeparent"
        >

        <AutoCompleteTextView
            android:padding="10dp"
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="@drawable/box2"
            android:fontFamily="@font/poppinsbold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeparent"
        app:layout_constraintEnd_toStartOf="@id/unitparent"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/box2"
        android:hint="मात्रा"
        android:fontFamily="@font/poppinsbold"
        android:inputType="number"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/quantity"
        app:layout_constraintTop_toBottomOf="@id/typeparent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="kg"
        android:id="@+id/unitparent"
        >

        <AutoCompleteTextView
            android:padding="10dp"
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="@drawable/box2"
            android:fontFamily="@font/poppinsbold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/mfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        android:background="@drawable/box2"
        android:hint="@string/mfg"
        android:inputType="date"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:padding="10dp"
        android:focusable="false"
        android:ems="15"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mfg"
        android:background="@drawable/box2"
        android:inputType="date"
        android:focusable="false"
        android:ems="15"
        android:hint="@string/exp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_margin="20dp"/>




    <Button
        android:id="@+id/addproductbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exp"
        android:layout_margin="30dp"
        android:background="@drawable/roundedcorner"
        android:text="@string/submit"
        android:fontFamily="@font/poppinsbold"/>


</androidx.constraintlayout.widget.ConstraintLayout>